examples/c/error-codes/violates-constraint/fatal/CV-CEA4-bad-static.output
CV-CEA4-bad-static.c:6:9: error: invalid operands to binary expression ('int' and 'int *')
  y = x - y;
      ~ ^ ~
1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
